# habitat

./: .gitignore  .gitmodules  CITATION.cff  NOTICE  README.md  index.html  main.css  main.js
analyzer/: .gitignore  README.md  extract-models.sh  install-dev.sh  setup.py
analyzer/habitat/: __init__.py  utils.py
analyzer/habitat/analysis/: __init__.py  arguments.py  device.py  kernels.py  metrics.py  operation.py  predictor.py  run_time.py  trace.py
analyzer/habitat/analysis/mlp/: dataset.py  dataset_process.py  devices.csv  devices.py  mlp.py  train.py
analyzer/habitat/analysis/mlp/saved_models/: .gitignore
analyzer/habitat/analysis/wave_scaling/: common.py  metadata.py  resimplified.py  roofline.py  unified.py
analyzer/habitat/data/: __init__.py  checksums  devices.yml  verify.sh
analyzer/habitat/profiling/: autograd.py  backward.py  kernel.py  operation.py  run_time.py
analyzer/habitat/tracking/: base.py  callable.py  hook_manager.py  operation.py
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/cmake/: FindCUPTI.cmake  FindNVPerf.cmake
cpp/src/: CMakeLists.txt  device_info.cpp  habitat_cuda.cpp
cpp/src/cuda/: CMakeLists.txt  cuda_macros.h  cupti_exceptions.cpp  cupti_exceptions.h  cupti_macros.h  cupti_manager.cpp  cupti_profiler.cpp  cupti_profiler.h  cupti_tracer.cpp  diagnostics.cu  diagnostics.h  habitat_cupti.h  kernel.cpp  kernel.h  legacy_cupti_profiler.cpp  legacy_cupti_profiler.h  metrics.h  new_cupti_profiler.cpp  new_cupti_profiler.h  sampled_measurement.h  utils-inl.h  utils.h
cpp/src/frontend/: CMakeLists.txt  model_bindings.cpp  model_bindings.h  profiler.cpp  profiler.h
docker/: Dockerfile  README.md  create-user.sh  setup.sh  start.sh  vars.sh
experiments/: gather_raw_data.sh  process_raw_data.sh  process_results.py  run_experiment.py
experiments/dcgan/: README.md  dcgan.py  entry_point.py
experiments/gnmt/: README.md  entry_point.py
experiments/gnmt/seq2seq/: utils.py
experiments/gnmt/seq2seq/data/: dataset.py  sampler.py  tokenizer.py
experiments/gnmt/seq2seq/inference/: beam_search.py  inference.py
experiments/gnmt/seq2seq/models/: attention.py  decoder.py  encoder.py  gnmt.py
experiments/gnmt/seq2seq/train/: fp_optimizers.py  lr_scheduler.py  trainer.py
experiments/inception/: README.md  entry_point.py  inception.py
experiments/resnet/: LICENSE  README.md  entry_point.py  resnet.py
experiments/transformer/: README.md  entry_point.py
experiments/transformer/tfmr/: Beam.py  Layers.py  Models.py  SubLayers.py  Translator.py
tools/device-metadata/: README.md  measure_peak_flops.py
tools/kernel-metadata/: extract.sh  process-cuobjdump-output.py
tools/recording/: combine_data.py  database.py  features.py  record_bmm.py  record_common.py  record_conv2d.py  record_linear.py  record_lstm.py  to_dataset.py
